<resources>
    <string name="app_name">锦里</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="symbol_division_sign">/</string>
    <string name="colon">:</string>
    <string name="login_username">请输入手机号</string>
    <string name="login_userpassword">请输入密码</string>
    <string name="savepsd_password">记住密码</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="register_phone">请输入11位手机号码</string>
    <string name="register_nicheng">汉字,字母或数字</string>
    <string name="register_password">至少六位数字</string>
    <string name="register_userpassword_second">请再输入一次密码</string>
    <string name="back">返回</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="phone">电话</string>
    <string name="remark">备注</string>
    <string name="applicants">报名者:</string>
    <string name="phone_error">拨号失败</string>
    <string name="agree">同意</string>
    <string name="unagree">拒绝</string>
    <string name="login_out">退出登录</string>
    <string name="student_id">学号</string>
    <string name="password">密码</string>
    <string name="prompt_input_student_id">请输入学号</string>
    <string name="prompt_student_id_error">学号位数不正确，请检查</string>
    <string name="prompt_input_password">请输入密码</string>
    <string name="logining">登录中…</string>
    <string name="geting_user_info">获取用户资料…</string>
    <string name="geting_user">获取用户…</string>
    <string name="login_success">登录成功</string>
    <string name="get_user_info_failed">获取用户资料失败</string>
    <string name="confirming_info">确认信息中…</string>
    <string name="your_phone_num_is">您的电话号码是</string>
    <string name="sending">发送信息中…</string>
    <string name="is_group_host_member">为该圈子成员</string>
    <string name="is_not_group_host_member">非圈子成员</string>
    <string name="activity_and_notification">活动/通知</string>
    <string name="this_month">本月</string>
    <string name="next_month">下月</string>
    <string name="all">所有</string>
    <string name="atlas">广场</string>
    <string name="send">发送</string>
    <string name="prompt_please_say">请说两句吧!</string>
    <string name="details">详情</string>
    <string name="host_first">主</string>
    <string name="host_second">办</string>
    <string name="detail">详细</string>
    <string name="activity_time">活动时间</string>
    <string name="activity_site">活动地点</string>
    <string name="site">地点</string>
    <string name="activity_details">活动详情</string>
    <string name="add_activity">加入活动</string>
    <string name="quit_activity">退出活动</string>
    <string name="delete_activity">删除活动</string>
    <string name="live">互动</string>
    <string name="member">成员</string>
    <string name="activity_member">活动成员</string>
    <string name="organization">组织</string>
    <string name="picture_download_fail">图片下载超时，请点击重试</string>
    <string name="cancle">取消</string>
    <string name="address_radiobutton_class">班级</string>
    <string name="confirm">确认</string>
    <string name="group_explanation">圈子说明</string>
    <string name="group_home_remark">圈子公告</string>
    <string name="add_group">加入圈子</string>
    <string name="ongoing_activities">进行中的活动</string>
    <string name="past_activities">查看圈子以往活动</string>
    <string name="admin">管理员</string>
    <string name="group_member">圈子成员</string>
    <string name="people">人</string>
    <string name="build">创建</string>
    <string name="chat">聊天</string>
    <string name="name">名称</string>
    <string name="explanation">公告</string>
    <string name="group_remark">说明</string>
    <string name="add_member_verification">新增成员验证</string>
    <string name="friend_add">好友添加</string>
    <string name="group_add">圈子添加</string>
    <string name="popular">热门</string>
    <string name="look_for">全部</string>
    <string name="group_friend">位圈友</string>
    <string name="add_add">+添加</string>
    <string name="already_add">已添加</string>
    <string name="add_friend">加为好友</string>
    <string name="faculties">院系:</string>
    <string name="my_faculties">院系</string>
    <string name="my_class">班级:</string>
    <string name="avatar">头像</string>
    <string name="address_list">通讯录</string>
    <string name="hint_input_name">输入名称</string>
    <string name="add">添加</string>
    <string name="search">搜索</string>
    <string name="photo">拍照</string>
    <string name="from_albums">从相册…</string>
    <string name="set">设置</string>
    <string name="sex">性别</string>
    <string name="set_more">设置更多</string>
    <string name="personal_information">个人信息</string>
    <string name="my_activities">我的活动</string>
    <string name="manage_group">管理圈子</string>
    <string name="manage_activities">管理活动</string>
    <string name="activity_notification">活动提醒</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="signature">签名:</string>
    <string name="my_signature">签名</string>
    <string name="belong_group">所在圈子:</string>
    <string name="account_management">账户管理</string>
    <string name="save">保存</string>
    <string name="modify_avatar">修改头像</string>
    <string name="mobile_phone">手机</string>
    <string name="prompt_phone_use">用于好友通讯和找回密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="set_avatar">设置头像</string>
    <string name="prompt_input_avatar">请设置头像</string>
    <string name="prompt_input_phone">请填写正确的手机号码</string>
    <string name="prompt_input_new_password">请输入新密码</string>
    <string name="prompt_passwords_not_match">密码不一致，请检查后重新填写</string>
    <string name="prompt_password_to_short">密码长度必须大于6位</string>
    <string name="get_verfication">获取验证码</string>
    <string name="prompt_not_your_phone">以上若非您本人的电话号码或未收到短信验证码，请致电客服电话028&#8211;68698108</string>
    <string name="login_hint">&#160;&#160;&#160;&#160;首次登录密码为您的身份证号码后六位，登录后请在个人信息中修改密码.\r\n&#160;&#160;&#160;&#160;《智慧校园A+》教育信息化软件是由四川传媒学院与中国电信联合出品的智能终端应用软件。
        该软件可向用户提供资讯、课程、学分、成绩、培训、生活、社交等多方面的多向式信息服务。\n&#160;&#160;&#160;&#160;祝同学们在四川传媒学院学习和生活愉快！</string>
    <string name="create_group">创建圈子</string>
    <string name="create_activity">创建活动</string>
    <string name="home">主页</string>
    <string name="submit">提交</string>
    <string name="submiting">提交中…</string>
    <string name="submit_failed">connection or server error</string>
    <string name="time">时间</string>
    <string name="to">至</string>
    <string name="limit_member_num">人数上限</string>
    <string name="image">图片</string>
    <string name="upload_image">上传图片</string>
    <string name="edit_activity">编辑活动</string>
    <string name="edit_group">编辑圈子</string>
    <string name="host_group">举办圈子</string>
    <string name="prompt_input_feedback">请输入您的建议</string>
    <string name="app_set">应用设置</string>
    <string name="new_message_notification">接受新消息提醒</string>
    <string name="new_message_voice_notification">新消息声音提醒</string>
    <string name="new_message_shake_notification">新消息震动提醒</string>
    <string name="about_version">版本</string>
    <string name="about_01">版权所有：智慧校园研发团队</string>
    <string name="uploading">上传中…</string>
    <string name="uploading_image">上传图片中…</string>
    <string name="builder_not_edit_password">确认不修改密码,继续使用初始密码?</string>
    <string name="builder_delet_activity">活动删除后不可在恢复,确认删除？</string>
    <string name="builder_quit_activity">确认退出该活动？</string>
    <string name="edit_info_success">修改资料成功!</string>
    <string name="geting_my_groups">获取我创建的圈子…</string>
    <string name="geting_my_activities">获取我创建的活动…</string>
    <string name="geting_my_add_activities">获取我参加的活动…</string>
    <string name="prompt_input_group_name">请输入圈子名称</string>
    <string name="prompt_input_group_explanation">请输入圈子说明</string>
    <string name="updating">更新中…</string>
    <string name="prompt_input_activity_name">请输入活动名称</string>
    <string name="prompt_input_activity_site">请输入活动地点</string>
    <string name="prompt_input_activity_details">请输入活动详情</string>
    <string name="prompt_input_activity_images">请选择活动图片</string>
    <string name="prompt_input_activity_time">请选择活动开始时间</string>
    <string name="prompt_input_activity_e_time_point">请选具体的结束时间</string>
    <string name="prompt_input_activity_f_time_small_e_time">结束时间不能在开始时间之前</string>
    <string name="prompt_input_activity_f_time_equale_e_time">开始时间和结束时间不能相同</string>
    <string name="to_say_a_few_words">说两句</string>
    <string name="send_live">发送互动</string>
    <string name="change_image">更换图片</string>
    <string name="prompt_add_image">请选择图片</string>
    <string name="prompt_input_keyword">请输入关键词</string>
    <string name="prompt_input_content">请输入互动内容</string>
    <string name="geting_group_info">获取圈子资料中…</string>
    <string name="geting_group">获取圈子…</string>
    <string name="quit_group">退出圈子</string>
    <string name="into_chat">进入聊天</string>
    <string name="geting_past_activities">获取以往活动…</string>
    <string name="geting_faculties">获取院系班级中…</string>
    <string name="my_name">姓名</string>
    <string name="edit_password">修改密码</string>
    <string name="prompt_record_fail">录音失败,可能没有麦克风</string>
    <string name="message_loadmore">更多</string>
    <string name="class_address">班级通讯录</string>
    <string name="friend_address">好友通讯录</string>
    <string name="group_address">圈子通讯录</string>
    <string name="prompt_upload_poster">请至少上传一张海报</string>
    <string name="inquiry_apply_add_friend">请求添加你为好友</string>
    <string name="inquiry_friendask_added">已添加</string>
    <string name="inquiry_friendask_nothandled">未处理</string>
    <string name="inquiry_voice">[语音]</string>
    <string name="inquiry_photo">[图片]</string>
    <string name="no_recent_chat">没有聊天记录</string>
    <string name="system_message">系统消息</string>
    <string name="detail_info">详情资料</string>
    <string name="no_create_group_can_not_create_activity">你还没有创建圈子，不能创建活动！</string>
    <string name="no_create_activity">你还没有创建活动！</string>
    <string name="no_create_group">你还没有创建圈子！</string>
    <string name="click_load_more">点击加载更多</string>
    <string name="click_loading_more">正在加载数据&#8230;</string>
    <string name="statusbar_multiusernotify">%1$d个用户发来%2$d条消息</string>
    <string name="statusbar_singleusermultimessagenotify">发来%1$d条消息</string>
    <string name="statusbar_singleuservoicenotify">%1$s发来一段语音</string>
    <string name="statusbar_singleusertextnotify">%1$s发来一条消息</string>
    <string name="news">校园资讯</string>
    <string name="cet">四六级</string>
    <string name="result">查成绩</string>
    <string name="timetable">查课程</string>
    <string name="train">培训信息</string>
	<string name="login_id_hint">请输入学号</string>
	<string name="login_pd_hint">请输入密码</string>
	<string name="connection_error">connection or server error!</string>
	<string name="connection_error_json">{\"status\":0,\"describe\":\"connection or server error!\"}</string>
	<string name="login_find_stuno_msg">请输入您的身份证号码:</string>
    <string name="loading">查询中&#8230;</string>
    <string name="main_btn_1">周边商户</string>
    <string name="main_btn_2">天翼手机</string>
    <string name="main_btn_3">购电影票</string>
    <string name="main_btn_4">购火车票</string>
    <string name="main_btn_5">购汽车票</string>
    <string name="main_btn_6">手机购彩</string>
    <string name="main_btn_7">爱心捐赠</string>
    <string name="main_btn_8">号码转账</string>
    <string name="main_btn_9">游戏快充</string>
	<string name="about_info">智慧校园A+系统智能终端系统内含多种应用，因系统处于测试期，或因数据源尚未就绪，部分功能暂未开通，敬请您谅解。请留意系统更新通知并及时升级，以便在新功能开通后您能正常使用。谢谢。</string>
    <string name="activity_news_popup_activity_all">全部活动</string>
    <string name="activity_news_popup_activity_weekly">本周活动</string>
    <string name="activity_news_popup_activity_month">本月活动</string>
    <string name="activity_news_popup_activity_nmonth">下月活动</string>
    <string name="activity_news_popup_activity_over">已过期活动</string>
    <string name="address_radiobutton_friend">好友</string>
    <string name="address_radiobutton_group">圈子</string>
</resources>