<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >
    <RelativeLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/activity_news_popup_top" />
    </RelativeLayout>

    <RadioGroup android:id="@id/activity_news_popup_activity_radios" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <RadioButton style="@style/activity_news_popup_radiobutton"
            android:id="@id/activity_news_popup_activity_all"
            android:text="@string/activity_news_popup_activity_all"
            android:background="@drawable/selector_activity_news_popup_item_top" />
        
        <RadioButton style="@style/activity_news_popup_radiobutton"
            android:id="@id/activity_news_popup_activity_weekly"
            android:text="@string/activity_news_popup_activity_weekly"
            android:background="@drawable/selector_activity_news_popup_item" />
        
        <RadioButton style="@style/activity_news_popup_radiobutton"
            android:id="@id/activity_news_popup_activity_month"
            android:text="@string/activity_news_popup_activity_month"
            android:checked="true"
            android:background="@drawable/selector_activity_news_popup_item" />
        
        <RadioButton style="@style/activity_news_popup_radiobutton"
            android:id="@id/activity_news_popup_activity_nmonth"
            android:text="@string/activity_news_popup_activity_nmonth"
            android:background="@drawable/selector_activity_news_popup_item" />
        
        <RadioButton style="@style/activity_news_popup_radiobutton"
            android:id="@id/activity_news_popup_activity_over"
            android:text="@string/activity_news_popup_activity_over"
            android:background="@drawable/selector_activity_news_popup_item_bottom" />
    </RadioGroup>
</LinearLayout>
