<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	    android:background="#FFFFFF" >
	
	<TextView android:id="@+id/about_com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/about_01"
        android:textColor="#7D7D7D"
        android:textSize="12sp" />
	
	<LinearLayout android:layout_above="@id/about_com"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
	
	    <include layout="@layout/title" />
	
	    <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="35dp"
	        android:adjustViewBounds="true"
	        android:contentDescription="@string/app_name"
	        android:scaleType="centerInside"
	        android:src="@drawable/icon" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="10dp"
	        android:text="@string/app_name"
	        android:textColor="#CC0033"
	        android:textSize="25sp" />
	
	    <TextView
	        android:id="@+id/tvVersion"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="8dp"
	        android:textColor="#7D7D7D"
	        android:textSize="12sp" />
	
	    <TextView android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textColor="#7D7D7D"
	        android:textSize="14sp"
	        android:padding="30dp"
	        android:text="@string/about_info"/>
	
	</LinearLayout>
</RelativeLayout>