<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical" >
    <RelativeLayout 
	    android:id="@id/activity_news_title"
	    android:layout_width="fill_parent"
	    android:layout_height="@dimen/public_title_height"
	    android:padding="@dimen/activity_news_title_padding"
	    android:background="@drawable/public_title_bg">
		<TextView android:id="@+id/address_title"
		    style="@style/public_title_text"
		    android:text="@string/address_list" />
		
		<ImageView android:id="@+id/address_title_add"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:paddingLeft="@dimen/activity_news_title_menu_padding"
		    android:paddingRight="@dimen/activity_news_title_menu_padding"
		    android:src="@drawable/address_title_add"
		    android:layout_alignParentRight="true"
		    android:visibility="gone" />
	</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/address_search_height"
        android:orientation="horizontal"
        android:paddingTop="@dimen/address_search_padding_vertical"
        android:paddingBottom="@dimen/address_search_padding_vertical"
        android:paddingRight="@dimen/address_search_padding_horizontal"
        android:paddingLeft="@dimen/address_search_padding_horizontal"
        android:background="@drawable/address_search_layout_bg" >
		
		<ImageView android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:layout_weight="0"
		    android:background="@drawable/address_search_left" />
		
		<LinearLayout android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:gravity="center_vertical"
		    android:orientation="horizontal"
	    	android:background="@drawable/address_search_bg"
		    android:layout_weight="1" >
	
	        <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
		    	android:layout_weight="0"
	            android:background="@drawable/address_search_icon"
	            android:contentDescription="@string/app_name" />
	        
	        <AutoCompleteTextView
	            android:id="@+id/address_search"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:completionThreshold="1"
		    	android:layout_weight="1"
	            android:background="@null"
	            android:textColor="@android:color/white"
	            android:inputType="text" />
	
	        <ImageView
	            android:id="@+id/address_clean"
	            android:layout_width="wrap_content"
	            android:layout_height="fill_parent"
	            android:paddingLeft="10dp"
	            android:paddingRight="10dp"
		    	android:layout_weight="0"
	            android:contentDescription="@string/app_name"
	            android:src="@drawable/address_search_clean" />
        </LinearLayout>
		
		<ImageView android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:layout_weight="0"
		    android:background="@drawable/address_search_right" />
    </LinearLayout>
    
    <RadioGroup android:id="@+id/address_radiogroup" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <RadioButton android:id="@+id/address_radiobutton_class"
	        android:text="@string/address_radiobutton_class"
	        style="@style/address_radiobutton" />
	    
	    <RadioButton android:id="@+id/address_radiobutton_friend"
	        style="@style/address_radiobutton"
	        android:text="@string/address_radiobutton_friend" />
	    
	    <RadioButton android:id="@+id/address_radiobutton_group"
	        style="@style/address_radiobutton"
	        android:text="@string/address_radiobutton_group" />
	</RadioGroup>
    
	<android.support.v4.view.ViewPager
	    android:id="@+id/address_viewpager"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="@android:color/white" />
</LinearLayout>